# app-settings

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.d.ts  svelte.config.js  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config_watcher.rs  lib.rs  main.rs  toml_writer.rs
src-tauri/src/commands/: about.rs  accessibility.rs  ai.rs  brightness.rs  config.rs  displays.rs  input.rs  knowledge.rs  mod.rs  modules.rs  night_light.rs  notifications.rs  picker.rs  search.rs  theme.rs  url.rs  waypointer_plugins.rs
src-tauri/src/displays/: mod.rs  profiles.rs  types.rs  wayland_client.rs
src/lib/: utils.ts
src/lib/components/: AppSidebar.svelte  SiteHeader.svelte  WindowControls.svelte
src/lib/components/appearance/: AccentPicker.svelte  AppPicker.svelte  AppRuleCard.svelte  BorderColorPicker.svelte  FontSelect.svelte  Group.svelte  ModeToggle.svelte  ModuleCard.svelte  PositionPicker.svelte  Row.svelte  Switch.svelte  TimeInput.svelte  ValueSlider.svelte
src/lib/components/displays/: BrightnessSection.svelte  MonitorMap.svelte  MonitorSidePanel.svelte  NightLightSection.svelte  ProfileSection.svelte  RevertConfirmModal.svelte
src/lib/components/quicksettings/: HiddenDrawer.svelte  PanelPreview.svelte  PreviewTile.svelte
src/lib/components/settings/: AddCustomBinding.svelte  KeyCapture.svelte  KeybindingRow.svelte  Placeholder.svelte  ReadOnlyKeybindingRow.svelte  SettingsGroup.svelte  SettingsPage.svelte  SettingsRow.svelte
src/lib/components/ui/: button.svelte  index.ts  separator.svelte  slider.svelte
src/lib/components/ui/add-remove-list/: add-remove-list.svelte  index.ts
src/lib/components/ui/avatar/: avatar-fallback.svelte  avatar.svelte
src/lib/components/ui/badge/: badge.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/card/: card.svelte
src/lib/components/ui/command/: command-input.svelte  command-item.svelte  command.svelte
src/lib/components/ui/command-string-editor/: command-string-editor.svelte  index.ts
src/lib/components/ui/confirm-dialog/: confirm-dialog.svelte
src/lib/components/ui/context-menu/: context-menu-checkbox-item.svelte  context-menu-content.svelte  context-menu-item.svelte  context-menu-radio-item.svelte  context-menu-sub-content.svelte  context-menu-sub-trigger.svelte
src/lib/components/ui/days-picker/: days-picker.svelte
src/lib/components/ui/directory-picker/: directory-picker.svelte  index.ts
src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-sub-content.svelte  dropdown-menu-sub-trigger.svelte
src/lib/components/ui/fill-slider/: fill-slider.svelte  index.ts
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/number-input/: number-input.svelte
src/lib/components/ui/popover/: popover-content.svelte
src/lib/components/ui/popover-select/: popover-select.svelte
src/lib/components/ui/row/: row.svelte
src/lib/components/ui/scroll-area/: scroll-area.svelte
src/lib/components/ui/select/: select.svelte
src/lib/components/ui/sidebar/: SidebarGroupLabel.svelte  SidebarMenuButton.svelte  SidebarTrigger.svelte
src/lib/components/ui/skeleton/: skeleton.svelte
src/lib/components/ui/slider/: slider.svelte
src/lib/components/ui/switch/: switch.svelte
src/lib/components/ui/time-input/: time-input.svelte
src/lib/components/ui/toggle/: toggle.svelte
src/lib/components/ui/value-slider/: value-slider.svelte
src/lib/components/ui/window-controls/: WindowControls.svelte
src/lib/components/workspaces/: AddWindowRuleDialog.svelte
src/lib/search/: index.ts  settings-registry.ts
src/lib/stores/: accessibility.ts  ai.ts  compositor.ts  config.ts  displays.ts  keybindings.ts  modules.ts  mouse.ts  navigation.ts  notifications.ts  projectsConfig.ts  shell.ts  systemActions.ts  theme.ts  touchpad.ts  workspaces.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/about/: +page.svelte
src/routes/accessibility/: +page.svelte
src/routes/ai/: +page.svelte
src/routes/appearance/: +page.svelte
src/routes/appearance/quicksettings/: +page.svelte
src/routes/display/: +page.svelte
src/routes/extensions/: +page.svelte
src/routes/focus/: +page.svelte
src/routes/keyboard/: +page.svelte
src/routes/keyboard/shortcuts/: +page.svelte
src/routes/knowledge/: +page.svelte
src/routes/mouse/: +page.svelte
src/routes/notifications/: +page.svelte
src/routes/privacy/: +page.svelte
src/routes/system-actions/: +page.svelte
src/routes/touchpad/: +page.svelte
src/routes/workspaces/: +page.svelte
