[package]
name = "lunaris-settings"
version = "0.1.0"
description = "Lunaris OS system settings app"
authors = ["Lunaris"]
edition = "2021"

[lib]
name = "lunaris_settings_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
notify = "6"
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
# Direct SQLite read/write of the notification daemon's history DB
# (`~/.local/share/lunaris/notifications.db`) for the per-app picker
# and the "clear history" action. SQLite handles concurrent access with
# the daemon transparently via its file locking.
rusqlite = { version = "0.32", features = ["bundled"] }
# Async D-Bus client for the compositor's input services. Tauri 2 ships
# its own async runtime so we rely on zbus' `tokio` feature and invoke
# via `#[tauri::command] async fn`.
lunaris-input-client = { path = "../../sdk/lunaris-input-client" }

# Lunaris titlebar plugin: binds lunaris-titlebar-v1 Wayland protocol when
# running under the Lunaris compositor, no-op otherwise. The graceful
# fallback means the Settings app still works on plain wlroots/GNOME.
tauri-plugin-lunaris-menu = { path = "../../sdk/tauri-plugin-menu" }

# Shared manifest parser / validator for module.toml files. The
# Settings app and the shell use the same schema via this crate.
lunaris-modules = { path = "../../sdk/modules" }

# Wayland client for the Display panel. We talk wlr-output-management
# (zwlr_output_manager_v1) directly because the compositor implements
# both wlr-output-management and cosmic-output-management on the
# server side. wlr is the cross-compositor standard so the app stays
# usable under plain wlroots / labwc / sway too.
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
libc = "0.2"

# Output config types shared with the compositor. We reuse the
# canonical OutputConfig + TOML schema (D0) so the apply path round-
# trips through the same struct shape that lands on disk.
cosmic-comp-config = { path = "../../compositor/cosmic-comp-config", features = ["output"] }

[dev-dependencies]
tempfile = "3"

# SDK crates (git deps once the settings repo is detached):
# os-sdk         = { git = "https://github.com/lunaris-sys/sdk", path = "os-sdk" }
# lunaris-theme  = { git = "https://github.com/lunaris-sys/sdk", path = "theme" }
# lunaris-config = { git = "https://github.com/lunaris-sys/sdk", path = "config" }
